<resources>
    <!-- APP name -->
    <string name="app_name">PuffRen</string>

    <!-- note -->
    <string name="internet_not_connected">未連接網路</string>

    <!-- profile -->
    <string name="user_nickname">使用者暱稱</string>
    <string name="user_level">使用者會員等級</string>
    <string name="puffren_id">泡芙人編號</string>
    <string name="puffren_performance_level">泡芙人考核等級</string>
    <string name="vendor_feature">泡芙人功能</string>
    <string name="member_feature">會員功能</string>
    <string name="sales_figures_report">營業狀況回報</string>
    <string name="sales_history_figures_report">營業紀錄回報</string>
    <string name="qrcode">QRCode</string>

    <!-- product & detail -->
    <string name="puff_prods">商品品項</string>
    <string name="note_select_item_first">請先選擇項目</string>
    <string name="note_choose_favor">選擇口味</string>
    <string name="nt_dollars_">NT$%d</string>
    <string name="buy_one">單盒購買</string>
    <string name="_buy_more_than_one">%d盒優惠</string>
    <string name="ingredient">成分</string>
    <string name="notification">注意事項</string>

    <!-- cart & delivery -->
    <string name="add2cart">加入購物車</string>

    <!-- login & registry -->
    <string name="forget_password">忘記密碼</string>
    <string name="login">登入</string>
    <string name="registry">註冊</string>
    <string name="account">帳號</string>
    <string name="email_account">Email帳號</string>
    <string name="password">密碼</string>
    <string name="login_account">登入帳號</string>
    <string name="registry_account">註冊帳號</string>
    <string name="account_nickname">帳號暱稱</string>
    <string name="invite_code">推薦碼</string>
    <string name="check_password">確認密碼</string>
    <string name="set_password">輸入密碼</string>
    <string name="registry_confirm">確認註冊</string>
    <string name="member_level">會員等級:</string>
    <string name="member_login_account">登入帳號:</string>
    <string name="member_nickname">會員暱稱:</string>
    <string name="edit_password">修改密碼</string>
    <string name="edit_member_info_done">會員資料修改完畢</string>
    <string name="send">送出</string>
    <string name="login_success">登入成功</string>
    <string name="registry_success">註冊成功</string>
    <string name="logout_success">會員已登出</string>
    <!-- order -->
    <string name="search_order">訂單查詢</string>

    <!-- member -->
    <string name="member_card">虛擬會員卡</string>
    <string name="member_info_edit">會員資料修改</string>
    <string name="member_activity">會員專屬活動</string>
    <string name="lvl1_member">白金泡芙</string>
    <string name="member_info_fill_note">填寫會員資料享有專屬優惠</string>

    <!-- location -->
    <string name="puffren_location">泡芙人位置</string>
    <string name="where_are_puffrens">泡芙人在哪裡</string>
    <string name="puffrens_tomorrow">明天哪裡有泡芙人</string>
    <string name="puffren_level">泡芙人等級: %s</string>
    <string name="no_level">未分級</string>

    <!-- cart -->
    <string name="item_selected">選購的商品</string>
    <string name="next_step">下一步</string>
    <string name="addto_success">加入成功</string>

    <!-- calendar -->
    <string name="sunday">日</string>
    <string name="one">一</string>
    <string name="two">二</string>
    <string name="three">三</string>
    <string name="four">四</string>
    <string name="five">五</string>
    <string name="six">六</string>

    <!-- coupon -->
    <string name="coupon">優惠券</string>

    <!-- performance -->
    <string name="performance">歷史考核</string>
    <string name="_level_test">%s級考核</string>
    <string name="_score">%d 分</string>

    <!-- report -->
    <string name="closed_today">今日休息</string>
    <string name="report_location">出攤位置回報</string>
    <string name="sale_status">我的營業狀況</string>
    <string name="report_advance">預先回報</string>
    <string name="option">選項</string>
    <string name="date">日期</string>
    <string name="time">時間</string>
    <string name="location">地點</string>
    <string name="location_input_note">請輸入或選擇開攤地點</string>
    <string name="report_data">回報資料</string>
    <string name="no_report_data">尚無回報資料</string>
    <string name="_quantity">%d 個</string>
    <string name="already_advance_report">已預先回報</string>
    <string name="open_at_">將於 %s 營業</string>
    <string name="report_sale_info">回報營收</string>
    <string name="report_close">回報關攤</string>
    <string name="confirm_close">確定關攤</string>
    <string name="close_success">關攤完成</string>
    <string name="report_open">回報出攤</string>
    <string name="confirm_open">確定出攤</string>
    <string name="location_field_note">出攤地點不可空白</string>
    <string name="open_success">出攤完成，祝營業順利 ^_^</string>
    <string name="report_closed">回報休息</string>
    <string name="closed_comfirm">確定休息</string>
    <string name="closed_success">回報休息成功</string>
    <string name="to">-</string>
    <string name="select_weather_note">請選擇天氣</string>
    <string name="report_everyday">每日 23:00 前完成營收回報</string>
    <string name="no_record_today">今天還沒有營業紀錄喔!</string>
    <string name="already_close">已收攤</string>
    <string name="already_report_in_time">已準時回報</string>
    <string name="opening">營業中</string>
    <string name="report_success">回報完成</string>
    <string-array name="weather_main_type">
        <item>晴</item>
        <item>陰</item>
        <item>雨</item>
        <item>晴時多雲</item>
    </string-array>

    <!-- achievement -->
    <string name="activity_period">活動日期:</string>
    <string name="progress">進度</string>
    <string name="period_to_">%s 至 %s</string>
    <string name="progress_divide_">%d/%d</string>
    <string name="no_achievement">目前沒有成就項目!</string>
    <string name="coming_soon">Coming Soon !!</string>

    <!-- invalid info -->
    <string name="invalid_email_empty">Email帳號不可為空</string>
    <string name="invalid_nickname_empty">暱稱不可為空</string>
    <string name="invalid_order_name_empty">訂購人姓名不可為空</string>
    <string name="invalid_password_empty">密碼不可為空</string>
    <string name="invalid_password_comfirm_empty">密碼確認不可為空</string>
    <string name="password_comfirm_fail">確認密碼與輸入密碼不同</string>
    <string name="login_fail">登入失敗，請確認帳號密碼是否正確。</string>
    <string name="achievement">成就達成</string>
    <string name="no_performance_data">還沒有任何歷史考核資料</string>

    <!-- activity -->
    <string name="start_scratch">點擊開始刮卡</string>
    <string name="event_title">活動標題</string>
    <string name="event_description">活動說明</string>
    <string name="event_period">活動期間</string>
    <string name="win_prize">恭喜中獎</string>
    <string name="lose_prize">可惜沒中QQ</string>
    <string name="lose_prize_note">再接再厲明天會更好</string>
    <string name="member_name">會員姓名:</string>
    <string name="member_city">會員城市:</string>
    <string name="member_address">會員地址:</string>
    <string name="member_phone">會員電話:</string>
    <string name="member_birthday">會員生日:</string>
    <string name="member_privacy_note">我已經閱讀並同意會員權益聲明與隱私權條款</string>
    <string name="update_user_success">會員資料更新成功!</string>

    <!-- user notification -->
    <string name="user_privacy">會員權益說明會員權益說明會員權益說明會員權益說明會員權益說明會員權益說明會員權益說明會員權益說明會員權益說明會員權益說明會員權益說明會員權益說明會員權益說明會員權益說明會員權益說明會員權益說明會員權益說明會員權益說明會員權益說明會員權益說明會員權益說明會員權益說明會員權益說明會員權益說明會員權益說明會員權益說明會員權益說明會員權益說明會員權益說明會員權益說明會員權益說明會員權益說明會員權益說明會員權益說明會員權益說明會員權益說明會員權益說明會員權益說明會員權益說明</string>
    <!-- TODO: Remove or change this placeholder text -->

    <!-- food cart -->
    <string name="basic_info">基本資訊</string>
    <string name="order_date">訂購日期:</string>
    <string name="order_address">訂購地址:</string>
    <string name="order_name">訂購人姓名:</string>
    <string name="order_phone">訂購人電話:</string>
    <string name="order_email">訂購人Email:</string>
    <string name="send_order">送出訂單</string>
    <string name="order_now">立即預約</string>
    <string name="order_content">訂購內容</string>
    <string name="invalid_order_date_empty">訂購日期不可為空</string>
    <string name="invalid_order_address_empty">訂購地址不可為空</string>
    <string name="invalid_order_phone_empty">訂購人電話不可為空</string>
    <string name="invalid_order_email_empty">訂購人Email不可為空</string>
    <string name="invalid_order_item_select">請選擇至少一種套餐</string>


    <!-- QR Code -->
    <string name="enter_total_amount">請輸入結帳金額</string>
    <string name="use_coupon">使用折價券</string>
    <string name="create_qr_code">產生 QR Code</string>
    <string name="discount">折價:</string>
    <string name="total_after_discount">折扣後結帳金額</string>
    <string name="back">返回</string>
    <string name="ok_and_create_order">確認 成立訂單</string>
    <string name="total_amount">消費金額</string>
    <string name="coupon_discount">優惠券折扣</string>
    <string name="member_discount">會員折扣</string>
    <string name="total_amount_after_discount">應付金額</string>
    <string name="amount_detail">消費明細</string>
    <string name="member_info">客戶資訊</string>
    <string name="please_scan_qr_code">請掃描 QR CODE</string>
    <string name="error_msg_contact_it">發生錯誤，請聯絡開發人員</string>
    <string name="not_evaluate_yet">尚未獲得評分</string>
    <string name="logout">登出</string>
    <string name="no_live_event_now">目前沒有進行中的活動喔!</string>

</resources>