<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:id="@+id/activity_custom_calendar">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/holo_orange_light"
        android:orientation="horizontal"
        android:paddingTop="8dp"
        android:paddingBottom="8dp">

        <ImageButton
            android:id="@+id/bt_previous"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:background="@drawable/ic_baseline_arrow_left_24"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/text_current_date"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintHorizontal_chainStyle="packed"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/text_current_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:gravity="center"
            android:textColor="@android:color/white"
            android:textSize="18sp"
            android:textStyle="bold"
            tools:text="Current Day"
            app:layout_constraintBottom_toBottomOf="@+id/bt_previous"
            app:layout_constraintEnd_toStartOf="@+id/bt_next"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/bt_previous"
            app:layout_constraintTop_toTopOf="@+id/bt_previous" />

        <ImageButton
            android:id="@+id/bt_next"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:background="@drawable/ic_baseline_arrow_right_24"
            app:layout_constraintBottom_toBottomOf="@+id/bt_previous"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/text_current_date"
            app:layout_constraintTop_toTopOf="@+id/bt_previous" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingTop="4dp"
        android:paddingBottom="4dp"
        android:background="@android:color/holo_orange_light">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/sunday"
            android:layout_marginTop="4dp"
            android:layout_weight="1"
            android:textStyle="bold"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/one"
            android:layout_marginTop="4dp"
            android:layout_weight="1"
            android:textStyle="bold"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/two"
            android:layout_marginTop="4dp"
            android:layout_weight="1"
            android:textStyle="bold"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/three"
            android:layout_marginTop="4dp"
            android:layout_weight="1"
            android:textStyle="bold"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/four"
            android:layout_marginTop="4dp"
            android:layout_weight="1"
            android:textStyle="bold"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/five"
            android:layout_marginTop="4dp"
            android:layout_weight="1"
            android:textStyle="bold"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/six"
            android:layout_marginTop="4dp"
            android:layout_weight="1"
            android:textStyle="bold"/>
    </LinearLayout>

    <GridView
        android:id="@+id/grid"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:numColumns="7"/>
</LinearLayout>
