<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewModel"
            type="com.rn1.puffren.ui.history.advance.AdvanceReportViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/bg_color_yellow"
        android:padding="64dp"
        tools:context=".ui.history.advance.AdvanceReportFragment">

        <TextView
            android:id="@+id/title_date"
            style="@style/text_style_login_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/date"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/title_time"
            style="@style/text_style_login_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:text="@string/time"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/title_date" />

        <TextView
            android:id="@+id/title_location"
            style="@style/text_style_login_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:text="@string/location"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/title_time" />

        <TextView
            android:id="@+id/text_date"
            style="@style/text_style_login_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:paddingHorizontal="8dp"
            android:text="@{viewModel.reportDate}"
            app:layout_constraintBottom_toBottomOf="@+id/title_date"
            app:layout_constraintStart_toEndOf="@id/title_date"
            app:layout_constraintTop_toTopOf="@+id/title_date"
            tools:text="2021-05-31" />

        <TextView
            android:id="@+id/text_time"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_marginStart="16dp"
            android:background="@drawable/round_corner_layout"
            android:gravity="center"
            android:paddingHorizontal="8dp"
            android:text="@={viewModel.openTime}"
            app:layout_constraintBottom_toBottomOf="@+id/title_time"
            app:layout_constraintStart_toEndOf="@id/title_time"
            app:layout_constraintTop_toTopOf="@+id/title_time"
            tools:text="21:00" />

        <EditText
            android:id="@+id/text_location"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="1dp"
            android:background="@drawable/round_corner_layout"
            android:hint="@string/location_input_note"
            android:inputType="textPostalAddress"
            android:paddingHorizontal="8dp"
            android:text="@={viewModel.openLocation}"
            android:textSize="12sp"
            app:layout_constraintBottom_toBottomOf="@+id/title_location"
            app:layout_constraintEnd_toStartOf="@+id/text_option"
            app:layout_constraintStart_toEndOf="@id/title_location"
            app:layout_constraintTop_toTopOf="@+id/title_location" />

        <TextView
            android:id="@+id/text_option"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/option"
            android:textColor="#2196F3"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="@+id/title_location"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/title_location" />

        <Button
            android:id="@+id/button_report_open_info"
            android:layout_width="0dp"
            android:layout_height="30dp"
            android:layout_marginTop="32dp"
            android:background="@drawable/round_corner_layout"
            android:backgroundTint="@color/orange_ffa626"
            android:onClick="@{() -> viewModel.reportInAdvance()}"
            android:text="@string/report_advance"
            android:textColor="@color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/title_location" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>