<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="viewModel"
            type="com.rn1.puffren.ui.login.LoginViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="80dp"
        android:background="@color/bg_color_yellow"
        tools:context=".ui.login.LoginFragment">

        <ImageView
            android:id="@+id/image_login_puff"
            android:layout_width="0dp"
            android:layout_height="80dp"
            android:background="@drawable/logo"
            android:scaleType="centerCrop"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:text="@string/login_account"
            android:textColor="#331900"
            android:textSize="26sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/image_login_puff" />

        <TextView
            android:id="@+id/text_title_email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:text="@string/account"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView2"
            style="@style/text_style_login_title" />


        <TextView
            android:id="@+id/text_title_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:text="@string/password"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/text_title_email"
            style="@style/text_style_login_title"/>

        <EditText
            android:id="@+id/editTextTextPersonName"
            android:layout_width="0dp"
            android:layout_height="30dp"
            android:layout_marginStart="16dp"
            android:background="@drawable/round_corner_layout"
            android:ems="10"
            android:inputType="textPersonName"
            android:text="@={viewModel.email}"
            android:textAlignment="center"
            android:paddingHorizontal="8dp"
            app:layout_constraintBottom_toBottomOf="@+id/text_title_email"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/text_title_email"
            app:layout_constraintTop_toTopOf="@+id/text_title_email" />

        <EditText
            android:id="@+id/editTextTextPersonName2"
            android:layout_width="0dp"
            android:layout_height="30dp"
            android:layout_marginStart="16dp"
            android:background="@drawable/round_corner_layout"
            android:ems="10"
            android:inputType="textPersonName"
            android:text="@={viewModel.password}"
            android:textAlignment="center"
            android:paddingHorizontal="8dp"
            app:layout_constraintBottom_toBottomOf="@+id/text_title_password"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/text_title_password"
            app:layout_constraintTop_toTopOf="@+id/text_title_password" />

        <Button
            android:id="@+id/button_login"
            android:layout_width="0dp"
            android:layout_height="30dp"
            android:layout_marginTop="32dp"
            android:textColor="@color/white"
            android:background="@drawable/round_corner_layout"
            android:backgroundTint="@color/orange_ffa626"
            android:text="@string/login"
            android:onClick="@{() -> viewModel.login()}"
            app:layout_constraintEnd_toEndOf="@+id/editTextTextPersonName2"
            app:layout_constraintStart_toStartOf="@+id/text_title_password"
            app:layout_constraintTop_toBottomOf="@+id/text_title_password" />

        <Button
            android:id="@+id/button_registry"
            android:layout_width="0dp"
            android:layout_height="30dp"
            android:layout_marginTop="24dp"
            android:background="@drawable/round_corner_layout"
            android:backgroundTint="@color/orange_ffa626"
            android:text="@string/registry"
            android:textColor="@color/white"
            android:onClick="@{() -> viewModel.navigateToRegistry()}"
            app:layout_constraintEnd_toEndOf="@+id/button_login"
            app:layout_constraintStart_toStartOf="@+id/button_login"
            app:layout_constraintTop_toBottomOf="@+id/button_login" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/forget_password"
            android:textColor="#2196F3"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/button_registry" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>